...
                                
                                IngredientsView(ingredients: detailsViewModel.mealDetails?.ingredients ?? [])
                                
                                Button {
                                    isShowingSafariView = true
                                } label: {
                                    ButtonView(title: "Watch on YouTube")
                                }
                                .padding()
                            }
                            
                        }
                        .navigationTitle(detailsViewModel.mealDetails?.strMeal ?? "")
...
